cicd/release/ioc-integration-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ioc-integration-service-release-TEST_COLOR
spec:
  selector:
    matchLabels:
      app: ioc-integration-service
      color: TEST_COLOR
  replicas: 1
  template:
    metadata:
      labels:
        app: ioc-integration-service
        color: TEST_COLOR
    spec:
      serviceAccountName: filebeat
      volumes:
        - name: shared-data
          emptyDir: { }
      containers:
        - name: ioc-integration-service-container
          image: 10.60.156.72/ioc/ioc-integration-service:IMAGE_VERSION
          volumeMounts:
            - name: shared-data
              mountPath: /logs-backend
          ports:
            - containerPort: 9998
        - image: 10.60.156.72/library/filebeat:3.0
          name: filebeat-agent
          command: [ "filebeat" ]
          args: [ "-E", "ES_HOSTS=\"$(ES_HOSTS)\"","-e","-strict.perms=false" ]
          volumeMounts:
            - name: shared-data
              mountPath: /log-data
          securityContext:
            runAsUser: 0
      imagePullSecrets:
        - name: habor
